# rust_cli

./: Cargo.toml  Readme.md
src/: choice.rs  choice_tests.rs  cli_args.rs  cli_utils.rs  lib.rs  main.rs  main.rs.bak
tests/: choice_test.rs  choice_tests.rs
