[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_cli"
#this allows to compile a .so file which is needed to work with C or python 
# crate-type = ["cdylib"]

#use this for integration testing, it loads tests/name_test.rs but i cannot figure out how to import my crate choice
# [[test]]
# name="choice_tests"
# args = ["--nocapture --test-threads=1"]

[dependencies]
regex = "1.10.2"
termcolor = "1.3.0"
